--- a/v_regular/Mocket/app/src/main/res/layout/fragment_memory.xml
+++ b/v_regular/Mocket/app/src/main/res/layout/fragment_memory.xml
@@ -6,243 +6,219 @@
     android:background="#efefef"
     tools:context=".fragments.MemoryFragment">
 
-
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="match_parent"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/MEMORY_linearLayout_addToMemory"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_height="240dp"
+            android:background="@drawable/border_shadow"
             android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/MEMORY_linearLayout_addToMemory"
                 android:layout_width="match_parent"
-                android:layout_height="240dp"
-                android:background="@drawable/border_shadow"
-                android:orientation="vertical">
+                android:layout_height="25dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/title_bottom_border"
+                android:orientation="horizontal"
+                android:weightSum="10">
 
-                <LinearLayout
+                <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="25dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginTop="20dp"
-                    android:background="@drawable/title_bottom_border"
-                    android:orientation="horizontal"
-                    android:weightSum="10">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:paddingLeft="20dp"
-                        android:text="Add to Memory"
-                        android:textColor="@color/mocket_dark_purple"
-                        android:textSize="17dp"
-                        android:textStyle="bold" />
-
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="40dp"
-                    android:layout_marginRight="40dp"
-                    android:layout_marginTop="10dp"
-                    android:orientation="horizontal"
-                    android:weightSum="10">
-
-                    <EditText
-                        android:id="@+id/MEMORY_editText_term"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="6.5"
-                        android:hint="Term"
-                        android:paddingLeft="20dp" />
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="0.5" />
-
-                    <Button
-                        android:id="@+id/MEMORY_button_lookUp"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="3"
-                        android:text="Look Up"
-                        android:textColor="@color/mocket_dark_purple" />
-
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:layout_marginLeft="40dp"
-                    android:layout_marginRight="40dp"
-                    android:layout_marginTop="0dp"
-                    android:orientation="horizontal">
-
-                    <EditText
-                        android:id="@+id/MEMORY_editText_definition"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Definition"
-                        android:lines="2"
-                        android:paddingLeft="20dp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="40dp"
-                    android:layout_marginRight="40dp"
-                    android:layout_marginTop="0dp"
-                    android:orientation="horizontal"
-                    android:weightSum="10">
-
-
-                    <TextView
-                        android:id="@+id/MEMORY_textView_clear"
-                        android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:layout_weight="2"
-                        android:clickable="true"
-                        android:paddingLeft="20dp"
-                        android:text="Clear"
-                        android:textColor="@color/mocket_dark_purple"
-                        android:textSize="15dp"
-                        android:textStyle="bold" />
-
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="4" />
-
-                    <Button
-                        android:id="@+id/MEMORY_button_memorize"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="4"
-                        android:text="Memorize !"
-                        android:textColor="@color/mocket_dark_purple" />
-
-                </LinearLayout>
+                    android:layout_height="match_parent"
+                    android:paddingLeft="20dp"
+                    android:text="Add to Memory"
+                    android:textColor="@color/mocket_dark_purple"
+                    android:textSize="17dp"
+                    android:textStyle="bold" />
 
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal"
+                android:weightSum="10">
+
+                <EditText
+                    android:id="@+id/MEMORY_editText_term"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="6.5"
+                    android:hint="Term"
+                    android:paddingLeft="20dp" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.5" />
+
+                <Button
+                    android:id="@+id/MEMORY_button_lookUp"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3"
+                    android:text="Look Up"
+                    android:textColor="@color/mocket_dark_purple" />
+
+
+            </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/MEMORY_linearLayout_todaysMemory"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/border_shadow"
-                android:orientation="vertical">
+                android:layout_height="60dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginTop="0dp"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/MEMORY_editText_definition"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Definition"
+                    android:lines="2"
+                    android:paddingLeft="20dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginTop="0dp"
+                android:orientation="horizontal"
+                android:weightSum="10">
+
+
+                <TextView
+                    android:id="@+id/MEMORY_textView_clear"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="2"
+                    android:clickable="true"
+                    android:paddingLeft="20dp"
+                    android:text="Clear"
+                    android:textColor="@color/mocket_dark_purple"
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
+
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="45dp"
-                    android:layout_marginLeft="20dp"
-                    android:orientation="horizontal"
-                    android:weightSum="10">
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="4" />
 
-                    <TextView
-                        android:id="@+id/MEMORY_textView_todaysMemoryTitle"
-                        android:layout_width="0dp"
-                        android:layout_height="25dp"
-                        android:layout_marginTop="20dp"
-                        android:layout_weight="8"
-                        android:background="@drawable/title_bottom_border"
-                        android:paddingLeft="20dp"
-                        android:text="Today's Memory"
-                        android:textColor="@color/mocket_dark_purple"
-                        android:textSize="17dp"
-                        android:textStyle="bold" />
+                <Button
+                    android:id="@+id/MEMORY_button_memorize"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="4"
+                    android:text="Memorize !"
+                    android:textColor="@color/mocket_dark_purple" />
 
-                    <ImageView
-                        android:id="@+id/MEMORY_imageView_quizButton"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginRight="0dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_weight="2"
-                        android:clickable="true"
-                        android:src="@drawable/quiz_button">
-
-                    </ImageView>
+            </LinearLayout>
 
 
-                </LinearLayout>
+        </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
+
+        <LinearLayout
+            android:id="@+id/MEMORY_linearLayout_todaysMemory"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/border_shadow"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginLeft="20dp"
+                android:orientation="horizontal"
+                android:weightSum="10">
+
+                <TextView
+                    android:id="@+id/MEMORY_textView_todaysMemoryTitle"
+                    android:layout_width="0dp"
+                    android:layout_height="25dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_weight="8"
+                    android:background="@drawable/title_bottom_border"
+                    android:paddingLeft="20dp"
+                    android:text="Today's Memory"
+                    android:textColor="@color/mocket_dark_purple"
+                    android:textSize="17dp"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:id="@+id/MEMORY_imageView_quizButton"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="0dp"
                     android:layout_marginTop="10dp"
-                    android:orientation="horizontal">
+                    android:layout_weight="2"
+                    android:clickable="true"
+                    android:src="@drawable/quiz_button_red">
 
-                    <SearchView
-                        android:id="@+id/MEMORY_searchView_term"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="40dp"
-                        android:layout_marginRight="40dp"
-                        android:background="@drawable/all_border">
+                </ImageView>
 
-                    </SearchView>
-                </LinearLayout>
 
-                <LinearLayout
-                    android:id="@+id/MEMORY_linearLayout_termList"
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <SearchView
+                    android:id="@+id/MEMORY_searchView_term"
                     android:layout_width="match_parent"
-                    android:layout_height="fill_parent"
-                    android:layout_marginTop="10dp">
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginRight="40dp"
+                    android:background="@drawable/all_border">
 
-                    <ListView
-                        android:id="@+id/MEMORY_listView_termList"
-                        android:layout_width="match_parent"
-                        android:layout_height="300dp"
-                        android:layout_marginLeft="30dp"
-                        android:layout_marginRight="30dp"
-                        android:listSelector="@android:color/transparent"
-                        android:visibility="gone"></ListView>
-                </LinearLayout>
+                </SearchView>
+            </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/MEMORY_linearLayout_termList"
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp">
 
-                <LinearLayout
+                <ListView
+                    android:id="@+id/MEMORY_listView_termList"
                     android:layout_width="match_parent"
-                    android:layout_height="20dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginTop="10dp">
-
-                    <ImageView
-                        android:id="@+id/MEMORY_imageView_expand"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/MEMORY_listView_termList"
-                        android:clickable="true"
-                        android:src="@drawable/expand_button" />
-
-                </LinearLayout>
-
-
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="30dp"
+                    android:listSelector="@android:color/transparent"
+                    android:visibility="visible" />
             </LinearLayout>
 
         </LinearLayout>
-    </ScrollView>
 
+    </LinearLayout>
 
 </RelativeLayout>
