--- a/v_regular/Mocket/app/src/main/res/drawable/game_title_bottom_border.xml
+++ b/v_regular/Mocket/app/src/main/res/drawable/game_title_bottom_border.xml
@@ -28,7 +28,7 @@
             <!-- SHADOW LAYER -->
             <item>
                 <shape>
-                    <solid android:color="@color/mocket_dark_purple" />
+                    <solid android:color="@color/mocket_font" />
                     <corners android:radius="0dp" />
                 </shape>
             </item>
