--- a/v_regular/Mocket/app/src/main/res/drawable/no_bottom_border.xml
+++ b/v_regular/Mocket/app/src/main/res/drawable/no_bottom_border.xml
@@ -38,7 +38,7 @@
             <item android:bottom="0dp" android:left="0dp" android:right="0dp" android:top="0dp">
 
                 <shape>
-                    <solid android:color="@color/background_category" />
+                    <solid android:color="@color/mocket_category" />
                     <corners android:radius="0dp" />
                 </shape>
             </item>
