--- a/v_regular/Mocket/app/src/main/res/layout/activity_change_password.xml
+++ b/v_regular/Mocket/app/src/main/res/layout/activity_change_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#efefef"
+    android:background="@color/mocket_fragment_background"
     android:orientation="vertical"
     tools:context=".activities.ChangePasswordActivity">
 
@@ -12,21 +12,23 @@
         android:id="@+id/CHANGEPASSWORD_toolbar"
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        android:background="?attr/colorPrimary"
+        android:background="@color/mocket_actionBar"
         android:minHeight="?attr/actionBarSize"
-        app:titleTextColor="@color/mocket_dark_purple">
+        app:titleTextColor="@color/mocket_font_dark">
 
         <ImageView
             android:layout_width="35dp"
             android:layout_height="match_parent"
-            android:src="@drawable/logo" />
+            android:src="@drawable/back_button"
+            android:clickable="true"
+            android:onClick="goPreviousActivity"/>
 
         <TextView
             android:layout_width="180dp"
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="Change Password"
-            android:textColor="@color/mocket_dark_purple"
+            android:textColor="@color/mocket_font_dark"
             android:textSize="22dp"
             android:textStyle="bold" />
 
@@ -63,7 +65,7 @@
                     android:paddingBottom="10dp"
                     android:paddingLeft="20dp"
                     android:text="Password should \n- be at least 8 digits long.\n- contain at least 1 uppercase."
-                    android:textColor="#000000"
+                    android:textColor="@color/mocket_font_dark"
                     android:textSize="15dp" />
 
                 <LinearLayout
@@ -92,6 +94,9 @@
                             android:layout_below="@id/CHANGEPASSWORD_textView_passwordRule"
                             android:hint="Password"
                             android:inputType="textPassword"
+                            android:textColor="@color/mocket_font"
+                            android:textCursorDrawable="@drawable/cursor_color"
+                            android:backgroundTint="@color/mocket_cursor"
                             android:paddingLeft="20dp"
                             android:paddingRight="20dp" />
 
@@ -101,6 +106,9 @@
                             android:layout_height="50dp"
                             android:layout_below="@id/CHANGEPASSWORD_editText_password1"
                             android:hint="Confirm password"
+                            android:textColor="@color/mocket_font"
+                            android:textCursorDrawable="@drawable/cursor_color"
+                            android:backgroundTint="@color/mocket_cursor"
                             android:inputType="textPassword"
                             android:paddingLeft="20dp"
                             android:paddingRight="20dp" />
@@ -127,7 +135,8 @@
                                 android:onClick="changePassword"
                                 android:paddingTop="10dp"
                                 android:text="Change"
-                                android:textColor="@color/mocket_dark_purple" />
+                                android:textColor="#ffffff"
+                                android:backgroundTint="@color/mocket_button" />
                         </LinearLayout>
                     </LinearLayout>
 
