--- a/v_regular/Mocket/app/src/main/res/layout/activity_forgot_password.xml
+++ b/v_regular/Mocket/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#efefef"
+    android:background="@color/mocket_fragment_background"
     android:orientation="vertical"
     tools:context=".activities.ForgotPasswordActivity">
 
@@ -13,21 +13,23 @@
         android:id="@+id/FORGOTPASSWORD_toolbar"
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        android:background="?attr/colorPrimary"
+        android:background="@color/mocket_actionBar"
         android:minHeight="?attr/actionBarSize"
-        app:titleTextColor="@color/mocket_dark_purple">
+        app:titleTextColor="@color/mocket_font_dark">
 
         <ImageView
             android:layout_width="35dp"
             android:layout_height="match_parent"
-            android:src="@drawable/logo" />
+            android:src="@drawable/back_button"
+            android:clickable="true"
+            android:onClick="goPreviousActivity"/>
 
         <TextView
             android:layout_width="180dp"
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="Forgot Password"
-            android:textColor="@color/mocket_dark_purple"
+            android:textColor="@color/mocket_font_dark"
             android:textSize="22dp"
             android:textStyle="bold" />
 
@@ -65,6 +67,9 @@
                     android:layout_weight="7.5"
                     android:hint="Email address"
                     android:inputType="textEmailAddress"
+                    android:textColor="@color/mocket_font"
+                    android:textCursorDrawable="@drawable/cursor_color"
+                    android:backgroundTint="@color/mocket_cursor"
                     android:paddingLeft="20dp" />
 
                 <LinearLayout
@@ -79,7 +84,8 @@
                     android:layout_weight="2"
                     android:onClick="sendVerificationCode"
                     android:text="Send"
-                    android:textColor="@color/mocket_dark_purple" />
+                    android:textColor="#ffffff"
+                    android:backgroundTint="@color/mocket_button"  />
 
 
             </LinearLayout>
@@ -91,7 +97,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:text="Verification code will be sent to your Email address."
-                android:textColor="#000000"
+                android:textColor="@color/mocket_font_dark"
                 android:textSize="15dp" />
 
 
@@ -121,7 +127,9 @@
                     android:layout_height="match_parent"
                     android:layout_weight="6"
                     android:hint="Verification code"
-                    android:inputType="textEmailAddress"
+                    android:textColor="@color/mocket_font"
+                    android:textCursorDrawable="@drawable/cursor_color"
+                    android:backgroundTint="@color/mocket_cursor"
                     android:textAlignment="center" />
 
                 <LinearLayout
@@ -136,7 +144,8 @@
                     android:layout_weight="3"
                     android:onClick="verifyCode"
                     android:text="Verify"
-                    android:textColor="@color/mocket_dark_purple" />
+                    android:textColor="#ffffff"
+                    android:backgroundTint="@color/mocket_button" />
 
 
             </LinearLayout>
@@ -148,7 +157,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:textAlignment="center"
-                android:textColor="#000000"
+                android:textColor="@color/mocket_font_dark"
                 android:textSize="15dp" />
 
         </LinearLayout>
