--- a/v_regular/Mocket/app/src/main/res/layout/activity_main.xml
+++ b/v_regular/Mocket/app/src/main/res/layout/activity_main.xml
@@ -13,9 +13,9 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        android:background="?attr/colorPrimary"
+        android:background="@color/mocket_actionBar"
         android:minHeight="?attr/actionBarSize"
-        app:titleTextColor="@color/mocket_dark_purple">
+        app:titleTextColor="@color/mocket_font_dark">
 
         <ImageView
             android:layout_width="35dp"
@@ -27,7 +27,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="Mocket"
-            android:textColor="@color/mocket_dark_purple"
+            android:textColor="@color/mocket_font_dark"
             android:textSize="22dp"
             android:textStyle="bold" />
 
@@ -41,7 +41,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:background="@color/background_category"
+            android:background="@color/mocket_background"
             android:orientation="horizontal"
             android:weightSum="4">
 
@@ -67,7 +67,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="?attr/selectableItemBackground"
+                android:background="@drawable/no_bottom_border"
                 android:clickable="true"
                 android:onClick="categoryClicked">
 
@@ -84,7 +84,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="?attr/selectableItemBackground"
+                android:background="@drawable/no_bottom_border"
                 android:clickable="true"
                 android:onClick="categoryClicked">
 
@@ -101,7 +101,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="?attr/selectableItemBackground"
+                android:background="@drawable/no_bottom_border"
                 android:clickable="true"
                 android:onClick="categoryClicked">
 
