--- a/v_regular/Mocket/app/src/main/res/layout/activity_quiz.xml
+++ b/v_regular/Mocket/app/src/main/res/layout/activity_quiz.xml
@@ -74,7 +74,7 @@
                         android:background="@android:color/transparent"
                         android:text="Added: "
                         android:textAlignment="textEnd"
-                        android:textColor="#000000"
+                        android:textColor="@color/mocket_font_dark"
                         android:textSize="13dp"
                         android:textStyle="bold" />
 
@@ -86,7 +86,7 @@
                         android:background="@android:color/transparent"
                         android:text="07/04/18"
                         android:textAlignment="textStart"
-                        android:textColor="@color/mocket_dark_purple"
+                        android:textColor="@color/mocket_font"
                         android:textSize="13dp" />
 
                     <LinearLayout
@@ -102,7 +102,7 @@
                         android:background="@android:color/transparent"
                         android:text="Last Memorized: "
                         android:textAlignment="textEnd"
-                        android:textColor="#000000"
+                        android:textColor="@color/mocket_font_dark"
                         android:textSize="13dp"
                         android:textStyle="bold" />
 
@@ -114,7 +114,7 @@
                         android:background="@android:color/transparent"
                         android:text="07/15/18"
                         android:textAlignment="textStart"
-                        android:textColor="@color/mocket_dark_purple"
+                        android:textColor="@color/mocket_font"
                         android:textSize="13dp" />
 
                     <LinearLayout
@@ -134,9 +134,8 @@
                     android:gravity="center"
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp"
-                    android:text="adj. large or heavy and therefore difficult to carry or use"
                     android:textAlignment="center"
-                    android:textColor="#000000"
+                    android:textColor="@color/mocket_font_dark"
                     android:textSize="15dp"
                     android:textStyle="bold" />
 
@@ -255,7 +254,7 @@
                             android:background="@android:color/transparent"
                             android:textAlignment="textEnd"
                             android:textStyle="bold"
-                            android:textColor="@color/mocket_dark_purple"
+                            android:textColor="@color/mocket_font_dark"
                             android:textSize="13dp" />
 
                         <TextView
@@ -265,7 +264,7 @@
                             android:layout_weight="3"
                             android:background="@android:color/transparent"
                             android:textAlignment="textStart"
-                            android:textColor="@color/mocket_dark_purple"
+                            android:textColor="@color/mocket_font"
                             android:textSize="13dp" />
 
                     </LinearLayout>
@@ -286,9 +285,8 @@
                     android:layout_weight="14"
                     android:background="@android:color/transparent"
                     android:gravity="center"
-                    android:text="Cumbersome"
                     android:textAlignment="center"
-                    android:textColor="#000000"
+                    android:textColor="@color/mocket_font_dark"
                     android:textSize="25dp"
                     android:textStyle="bold" />
 
