--- a/v_regular/Mocket/app/src/main/res/layout/activity_sign_up.xml
+++ b/v_regular/Mocket/app/src/main/res/layout/activity_sign_up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#efefef"
+    android:background="@color/mocket_fragment_background"
     android:orientation="vertical"
     tools:context=".activities.SignUpActivity">
 
@@ -13,21 +13,23 @@
         android:id="@+id/SIGNUP_toolbar"
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        android:background="?attr/colorPrimary"
+        android:background="@color/mocket_actionBar"
         android:minHeight="?attr/actionBarSize"
-        app:titleTextColor="@color/mocket_dark_purple">
+        app:titleTextColor="@color/mocket_font">
 
         <ImageView
             android:layout_width="35dp"
             android:layout_height="match_parent"
-            android:src="@drawable/logo" />
+            android:src="@drawable/back_button"
+            android:clickable="true"
+            android:onClick="goPreviousActivity"/>
 
         <TextView
             android:layout_width="90dp"
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="Sign Up"
-            android:textColor="@color/mocket_dark_purple"
+            android:textColor="@color/mocket_font"
             android:textSize="22dp"
             android:textStyle="bold" />
 
@@ -84,7 +86,7 @@
                                 android:layout_centerVertical="true"
                                 android:onClick="addProfileImage"
                                 android:src="@drawable/add_image"
-                                app:civ_border_color="@color/mocket_dark_purple"
+                                app:civ_border_color="@color/mocket_font"
                                 app:civ_border_width="2dp" />
 
                             <LinearLayout
@@ -98,6 +100,9 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="50dp"
                                     android:hint="First Name"
+                                    android:textColor="@color/mocket_font"
+                                    android:textCursorDrawable="@drawable/cursor_color"
+                                    android:backgroundTint="@color/mocket_cursor"
                                     android:textAlignment="center" />
 
 
@@ -106,6 +111,9 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="50dp"
                                     android:hint="Last Name"
+                                    android:textColor="@color/mocket_font"
+                                    android:textCursorDrawable="@drawable/cursor_color"
+                                    android:backgroundTint="@color/mocket_cursor"
                                     android:textAlignment="center" />
 
                             </LinearLayout>
@@ -129,6 +137,9 @@
                                     android:layout_height="match_parent"
                                     android:layout_weight="6.5"
                                     android:hint="Email address"
+                                    android:textColor="@color/mocket_font"
+                                    android:textCursorDrawable="@drawable/cursor_color"
+                                    android:backgroundTint="@color/mocket_cursor"
                                     android:inputType="textEmailAddress"
                                     android:paddingLeft="20dp" />
 
@@ -144,7 +155,8 @@
                                     android:layout_weight="3"
                                     android:onClick="send"
                                     android:text="Send"
-                                    android:textColor="@color/mocket_dark_purple" />
+                                    android:textColor="#ffffff"
+                                    android:backgroundTint="@color/mocket_button" />
 
                             </LinearLayout>
 
@@ -153,7 +165,7 @@
                                 android:layout_height="30dp"
                                 android:paddingLeft="10dp"
                                 android:text="Verification code will be sent to this Email address."
-                                android:textColor="#000000" />
+                                android:textColor="@color/mocket_font_dark" />
 
                             <LinearLayout
                                 android:layout_width="match_parent"
@@ -178,6 +190,9 @@
                                         android:layout_height="match_parent"
                                         android:layout_weight="5"
                                         android:hint="Verification Code"
+                                        android:textColor="@color/mocket_font"
+                                        android:textCursorDrawable="@drawable/cursor_color"
+                                        android:backgroundTint="@color/mocket_cursor"
                                         android:textAlignment="center" />
 
                                     <LinearLayout
@@ -192,7 +207,8 @@
                                         android:layout_weight="3"
                                         android:onClick="verify"
                                         android:text="Verify"
-                                        android:textColor="@color/mocket_dark_purple" />
+                                        android:textColor="#ffffff"
+                                        android:backgroundTint="@color/mocket_button"/>
 
                                 </LinearLayout>
 
@@ -207,7 +223,7 @@
                             android:paddingBottom="10dp"
                             android:paddingLeft="20dp"
                             android:text="Password should \n- be at least 8 digits long.\n- contain at least 1 uppercase."
-                            android:textColor="#000000"
+                            android:textColor="@color/mocket_font_dark"
                             android:textSize="15dp" />
 
                         <LinearLayout
@@ -238,6 +254,9 @@
                                         android:layout_height="match_parent"
                                         android:layout_weight="9"
                                         android:hint="Password"
+                                        android:textColor="@color/mocket_font"
+                                        android:textCursorDrawable="@drawable/cursor_color"
+                                        android:backgroundTint="@color/mocket_cursor"
                                         android:inputType="textPassword"
                                         android:paddingLeft="20dp" />
 
@@ -273,6 +292,9 @@
                                         android:layout_height="match_parent"
                                         android:layout_weight="9"
                                         android:hint="Confirm Password"
+                                        android:textColor="@color/mocket_font"
+                                        android:textCursorDrawable="@drawable/cursor_color"
+                                        android:backgroundTint="@color/mocket_cursor"
                                         android:inputType="textPassword"
                                         android:paddingLeft="20dp" />
 
@@ -308,7 +330,8 @@
                                         android:layout_weight="3"
                                         android:onClick="signUp"
                                         android:text="Sign Up"
-                                        android:textColor="@color/mocket_dark_purple" />
+                                        android:textColor="#ffffff"
+                                        android:backgroundTint="@color/mocket_button" />
 
                                 </LinearLayout>
 
