--- a/v_regular/Mocket/app/src/main/res/layout/fragment_graph.xml
+++ b/v_regular/Mocket/app/src/main/res/layout/fragment_graph.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#efefef"
+    android:background="@color/mocket_fragment_background"
     tools:context=".fragments.GraphFragment">
 
     <ScrollView
@@ -26,7 +26,7 @@
                 android:layout_marginTop="0dp"
                 android:background="@drawable/border_shadow"
                 android:orientation="vertical">
-                <!--android:id="@+id/GRAPH_linearLayout_graph"-->
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -43,7 +43,7 @@
                         android:background="@drawable/title_bottom_border"
                         android:paddingLeft="20dp"
                         android:text="Statistics"
-                        android:textColor="@color/mocket_dark_purple"
+                        android:textColor="@color/mocket_font_dark"
                         android:textSize="17dp"
                         android:textStyle="bold" />
 
@@ -74,7 +74,9 @@
                             android:layout_height="match_parent"
                             android:layout_weight="13"
                             android:text="1 Week"
-                            android:textSize="12dp" />
+                            android:textSize="12dp"
+                            android:textColor="#ffffff"
+                            android:backgroundTint="@color/mocket_button"/>
 
                         <LinearLayout
                             android:layout_width="0dp"
@@ -86,7 +88,9 @@
                             android:layout_height="match_parent"
                             android:layout_weight="13"
                             android:text="1 Month"
-                            android:textSize="12dp" />
+                            android:textSize="12dp"
+                            android:textColor="#ffffff"
+                            android:backgroundTint="@color/mocket_button"/>
 
                         <LinearLayout
                             android:layout_width="0dp"
@@ -98,7 +102,9 @@
                             android:layout_height="match_parent"
                             android:layout_weight="13"
                             android:text="1 Year"
-                            android:textSize="12dp" />
+                            android:textSize="12dp"
+                            android:textColor="#ffffff"
+                            android:backgroundTint="@color/mocket_button"/>
 
                         <LinearLayout
                             android:layout_width="0dp"
@@ -135,7 +141,7 @@
                         android:background="@drawable/title_bottom_border"
                         android:paddingLeft="20dp"
                         android:text="All Terms in Memory"
-                        android:textColor="@color/mocket_dark_purple"
+                        android:textColor="@color/mocket_font_dark"
                         android:textSize="17dp"
                         android:textStyle="bold" />
 
@@ -156,7 +162,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="40dp"
                         android:layout_marginRight="40dp"
-                        android:background="@drawable/all_border">
+                        android:background="@drawable/all_border"
+                        android:theme="@style/searchView">
 
                     </SearchView>
                 </LinearLayout>
