--- a/v_regular/Mocket/app/src/main/res/layout/fragment_memory.xml
+++ b/v_regular/Mocket/app/src/main/res/layout/fragment_memory.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#efefef"
+    android:background="@color/mocket_fragment_background"
     tools:context=".fragments.MemoryFragment">
 
     <LinearLayout
@@ -18,7 +18,7 @@
         <LinearLayout
             android:id="@+id/MEMORY_linearLayout_addToMemory"
             android:layout_width="match_parent"
-            android:layout_height="240dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/border_shadow"
             android:orientation="vertical">
 
@@ -37,7 +37,7 @@
                     android:layout_height="match_parent"
                     android:paddingLeft="20dp"
                     android:text="Add to Memory"
-                    android:textColor="@color/mocket_dark_purple"
+                    android:textColor="@color/mocket_font_dark"
                     android:textSize="17dp"
                     android:textStyle="bold" />
 
@@ -59,6 +59,9 @@
                     android:layout_height="match_parent"
                     android:layout_weight="6.5"
                     android:hint="Term"
+                    android:textColor="@color/mocket_font"
+                    android:textCursorDrawable="@drawable/cursor_color"
+                    android:backgroundTint="@color/mocket_cursor"
                     android:paddingLeft="20dp" />
 
                 <LinearLayout
@@ -72,7 +75,8 @@
                     android:layout_height="match_parent"
                     android:layout_weight="3"
                     android:text="Look Up"
-                    android:textColor="@color/mocket_dark_purple" />
+                    android:textColor="#ffffff"
+                    android:backgroundTint="@color/mocket_button"/>
 
 
             </LinearLayout>
@@ -91,6 +95,9 @@
                     android:layout_height="wrap_content"
                     android:hint="Definition"
                     android:lines="2"
+                    android:textColor="@color/mocket_font"
+                    android:textCursorDrawable="@drawable/cursor_color"
+                    android:backgroundTint="@color/mocket_cursor"
                     android:paddingLeft="20dp" />
             </LinearLayout>
 
@@ -100,6 +107,7 @@
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="40dp"
                 android:layout_marginTop="0dp"
+                android:layout_marginBottom="15dp"
                 android:orientation="horizontal"
                 android:weightSum="10">
 
@@ -112,7 +120,7 @@
                     android:clickable="true"
                     android:paddingLeft="20dp"
                     android:text="Clear"
-                    android:textColor="@color/mocket_dark_purple"
+                    android:textColor="@color/mocket_font"
                     android:textSize="15dp"
                     android:textStyle="bold" />
 
@@ -127,8 +135,9 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="4"
-                    android:text="Memorize !"
-                    android:textColor="@color/mocket_dark_purple" />
+                    android:text="Memorize"
+                    android:textColor="#ffffff"
+                    android:backgroundTint="@color/mocket_button"/>
 
             </LinearLayout>
 
@@ -162,7 +171,7 @@
                     android:background="@drawable/title_bottom_border"
                     android:paddingLeft="20dp"
                     android:text="Today's Memory"
-                    android:textColor="@color/mocket_dark_purple"
+                    android:textColor="@color/mocket_font_dark"
                     android:textSize="17dp"
                     android:textStyle="bold" />
 
@@ -195,7 +204,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="40dp"
                     android:layout_marginRight="40dp"
-                    android:background="@drawable/all_border">
+                    android:background="@drawable/all_border"
+                    android:theme="@style/searchView">
 
                 </SearchView>
             </LinearLayout>
