--- a/v_regular/Mocket/app/src/main/res/layout/fragment_more.xml
+++ b/v_regular/Mocket/app/src/main/res/layout/fragment_more.xml
@@ -64,7 +64,7 @@
                         android:layout_weight="4"
                         android:gravity="center_vertical"
                         android:text="Chang Min Park"
-                        android:textColor="#000000"
+                        android:textColor="@color/mocket_font_dark"
                         android:textSize="20dp"
                         android:textStyle="bold" />
 
@@ -76,7 +76,7 @@
                         android:gravity="center_vertical"
                         android:paddingLeft="10dp"
                         android:text="cpark22@buffalo.edu"
-                        android:textColor="#000000"
+                        android:textColor="@color/mocket_font"
                         android:textSize="12dp" />
 
                     <LinearLayout
@@ -126,7 +126,7 @@
                         android:layout_height="25dp"
                         android:paddingLeft="20dp"
                         android:text="Settings"
-                        android:textColor="@color/mocket_dark_purple"
+                        android:textColor="@color/mocket_font_dark"
                         android:textSize="17dp"
                         android:textStyle="bold" />
 
@@ -144,19 +144,20 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="7"
+                        android:layout_weight="6"
                         android:paddingLeft="30dp"
                         android:text="Quiz notification duration"
-                        android:textColor="#000000"
-                        android:textSize="17dp"
+                        android:textColor="@color/mocket_font"
+                        android:textSize="15dp"
                         android:textStyle="bold" />
 
                     <Spinner
                         android:id="@+id/MORE_spinner_notification"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="3"
-                        android:paddingRight="30dp" />
+                        android:layout_weight="4"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp" />
 
                 </LinearLayout>
 
@@ -165,7 +166,7 @@
                     android:layout_height="25dp"
                     android:layout_marginLeft="60dp"
                     android:text="(between 9am-9pm)"
-                    android:textColor="#000000"
+                    android:textColor="@color/mocket_font_light"
                     android:textSize="13dp" />
 
                 <LinearLayout
@@ -180,19 +181,20 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="7"
+                        android:layout_weight="6"
                         android:paddingLeft="30dp"
                         android:text="Direct open gesture"
-                        android:textColor="#000000"
-                        android:textSize="17dp"
+                        android:textColor="@color/mocket_font"
+                        android:textSize="15dp"
                         android:textStyle="bold" />
 
                     <Spinner
                         android:id="@+id/MORE_spinner_gesture"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="3"
-                        android:paddingRight="30dp" />
+                        android:layout_weight="4"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp" />
 
                 </LinearLayout>
 
@@ -208,19 +210,20 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="7"
+                        android:layout_weight="6"
                         android:paddingLeft="30dp"
                         android:text="Vibration"
-                        android:textColor="#000000"
-                        android:textSize="17dp"
+                        android:textColor="@color/mocket_font"
+                        android:textSize="15dp"
                         android:textStyle="bold" />
 
                     <Spinner
                         android:id="@+id/MORE_spinner_vibration"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="3"
-                        android:paddingRight="30dp" />
+                        android:layout_weight="4"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp"/>
 
                 </LinearLayout>
 
@@ -235,19 +238,21 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="6" />
+                        android:layout_weight="7" />
 
                     <Button
                         android:id="@+id/MORE_button_save"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="2"
-                        android:text="Save" />
+                        android:text="Save"
+                        android:textColor="#ffffff"
+                        android:backgroundTint="@color/mocket_button"/>
 
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="2" />
+                        android:layout_weight="1" />
 
                 </LinearLayout>
 
