--- a/v_regular/Mocket/app/src/main/res/layout/fragment_quiz.xml
+++ b/v_regular/Mocket/app/src/main/res/layout/fragment_quiz.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#efefef"
+    android:background="@color/mocket_fragment_background"
     tools:context=".fragments.QuizFragment">
 
     <ScrollView
@@ -44,22 +44,30 @@
                         android:layout_weight="5"
                         android:paddingLeft="20dp"
                         android:text="Daily Test"
-                        android:textColor="@color/mocket_dark_purple"
+                        android:textColor="@color/mocket_font_dark"
                         android:textSize="17dp"
                         android:textStyle="bold" />
 
                     <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="3.5"
+                        android:paddingTop="5dp"
+                        android:text="Left: "
+                        android:textAlignment="viewEnd"
+                        android:textColor="@color/mocket_font_dark"
+                        android:textSize="14dp"
+                        android:textStyle="bold" />
+                    <TextView
                         android:id="@+id/QUIZ_textView_leftTotal"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="5"
-                        android:paddingRight="10dp"
+                        android:layout_weight="1.5"
                         android:paddingTop="5dp"
-                        android:text="243/897 (Left/Total)"
-                        android:textAlignment="viewEnd"
-                        android:textColor="#000000"
-                        android:textSize="14dp"
-                        android:textStyle="bold" />
+                        android:text="243"
+                        android:textAlignment="viewStart"
+                        android:textColor="@color/mocket_font"
+                        android:textSize="14dp" />
 
 
                 </LinearLayout>
@@ -69,7 +77,7 @@
                     android:layout_height="wrap_content"
                     android:paddingLeft="35dp"
                     android:text="It contains all terms that should be tested today."
-                    android:textColor="#000000"
+                    android:textColor="@color/mocket_font"
                     android:textSize="15dp" />
 
                 <ImageView
@@ -98,6 +106,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:layout_marginTop="20dp"
+                    android:layout_marginBottom="5dp"
                     android:background="@drawable/title_bottom_border"
                     android:orientation="horizontal"
                     android:weightSum="10">
@@ -107,7 +116,7 @@
                         android:layout_height="match_parent"
                         android:paddingLeft="20dp"
                         android:text="GAME"
-                        android:textColor="@color/mocket_dark_purple"
+                        android:textColor="@color/mocket_font_dark"
                         android:textSize="17dp"
                         android:textStyle="bold" />
 
@@ -118,8 +127,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingLeft="35dp"
-                    android:text="Play with what you have learend so far."
-                    android:textColor="#000000"
+                    android:text="Play with all the terms you have memorized."
+                    android:textColor="@color/mocket_font"
                     android:textSize="15dp" />
 
                 <ImageView
