--- a/v_regular/Mocket/app/src/main/res/layout/logo.xml
+++ b/v_regular/Mocket/app/src/main/res/layout/logo.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="@color/mocket_fragment_background"
     android:orientation="vertical"
     android:weightSum="10">
 
