--- a/v_regular/Mocket/app/src/main/res/layout/term_item.xml
+++ b/v_regular/Mocket/app/src/main/res/layout/term_item.xml
@@ -25,7 +25,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="27dp"
                 android:text="term"
-                android:textColor="#000000"
+                android:textColor="@color/mocket_font"
                 android:textSize="20dp" />
 
             <TextView
