--- a/v_regular/Mocket/app/src/main/res/layout/fragment_graph.xml
+++ b/v_regular/Mocket/app/src/main/res/layout/fragment_graph.xml
@@ -6,13 +6,9 @@
     android:background="@color/mocket_fragment_background"
     tools:context=".fragments.GraphFragment">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
@@ -21,9 +17,11 @@
 
 
             <LinearLayout
+                android:id="@+id/GRAPH_linearLayout_graph"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
+                android:layout_marginBottom="10dp"
                 android:background="@drawable/border_shadow"
                 android:orientation="vertical">
 
@@ -117,14 +115,16 @@
                 </LinearLayout>
             </LinearLayout>
 
+
             <LinearLayout
                 android:id="@+id/GRAPH_linearLayout_allTerms"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
                 android:layout_marginBottom="20dp"
-                android:layout_marginTop="10dp"
                 android:background="@drawable/border_shadow"
                 android:orientation="vertical">
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -132,7 +132,6 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:orientation="horizontal">
-
                     <TextView
                         android:id="@+id/GRAPH_textView_allTermsTitle"
                         android:layout_width="match_parent"
@@ -144,18 +143,18 @@
                         android:textColor="@color/mocket_font_dark"
                         android:textSize="17dp"
                         android:textStyle="bold" />
-
-
                 </LinearLayout>
 
+
                 <LinearLayout
+                    android:id="@+id/GRAPH_linearLayout_searchView"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:layout_marginTop="10dp"
-                    android:orientation="horizontal">
-
+                    android:orientation="horizontal"
+                    android:visibility="gone">
                     <SearchView
                         android:id="@+id/GRAPH_searchView_term"
                         android:layout_width="match_parent"
@@ -173,25 +172,24 @@
                     android:id="@+id/GRAPH_linearLayout_termList"
                     android:layout_width="match_parent"
                     android:layout_height="fill_parent"
+                    android:layout_weight="1"
                     android:layout_marginTop="10dp">
-
                     <ListView
                         android:id="@+id/GRAPH_listView_termList"
                         android:layout_width="match_parent"
-                        android:layout_height="300dp"
+                        android:layout_height="match_parent"
                         android:layout_marginLeft="30dp"
                         android:layout_marginRight="30dp"
                         android:listSelector="@android:color/transparent"
-                        android:visibility="gone"></ListView>
+                        android:visibility="gone"/>
                 </LinearLayout>
 
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="20dp"
+                    android:layout_height="25dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp">
-
                     <ImageView
                         android:id="@+id/GRAPH_imageView_expand"
                         android:layout_width="wrap_content"
@@ -199,14 +197,10 @@
                         android:layout_below="@+id/GRAPH_listView_termList"
                         android:clickable="true"
                         android:src="@drawable/expand_button" />
-
                 </LinearLayout>
-
 
             </LinearLayout>
 
-
         </LinearLayout>
 
-    </ScrollView>
 </RelativeLayout>
