--- a/v_regular/Mocket/app/src/main/res/layout/fragment_quiz.xml
+++ b/v_regular/Mocket/app/src/main/res/layout/fragment_quiz.xml
@@ -35,41 +35,16 @@
                     android:layout_marginRight="20dp"
                     android:layout_marginTop="20dp"
                     android:background="@drawable/title_bottom_border"
-                    android:orientation="horizontal"
-                    android:weightSum="10">
+                    android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="5"
                         android:paddingLeft="20dp"
                         android:text="Daily Test"
                         android:textColor="@color/mocket_font_dark"
                         android:textSize="17dp"
                         android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="3.5"
-                        android:paddingTop="5dp"
-                        android:text="Left: "
-                        android:textAlignment="viewEnd"
-                        android:textColor="@color/mocket_font_dark"
-                        android:textSize="14dp"
-                        android:textStyle="bold" />
-                    <TextView
-                        android:id="@+id/QUIZ_textView_leftTotal"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1.5"
-                        android:paddingTop="5dp"
-                        android:text="243"
-                        android:textAlignment="viewStart"
-                        android:textColor="@color/mocket_font"
-                        android:textSize="14dp"
-                        android:textStyle="bold"/>
-
 
                 </LinearLayout>
 
@@ -84,11 +59,11 @@
                 <ImageView
                     android:id="@+id/QUIZ_imageView_start"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_height="180dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginTop="0dp"
                     android:clickable="true"
-                    android:src="@drawable/start_button" />
+                    android:src="@drawable/daily_test" />
 
 
             </LinearLayout>
@@ -135,11 +110,11 @@
                 <ImageView
                     android:id="@+id/QUIZ_imageView_playnow"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_height="150dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginTop="10dp"
                     android:clickable="true"
-                    android:src="@drawable/playnow_button" />
+                    android:src="@drawable/game" />
 
 
             </LinearLayout>
