--- a/v_regular/Mocket/app/src/main/res/layout/term_item.xml
+++ b/v_regular/Mocket/app/src/main/res/layout/term_item.xml
@@ -20,13 +20,26 @@
             android:layout_weight="8"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/TERMITEM_term"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="27dp"
-                android:text="term"
-                android:textColor="@color/mocket_font"
-                android:textSize="20dp" />
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/TERMITEM_term"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="term"
+                    android:textColor="@color/mocket_font"
+                    android:textSize="20dp" />
+                <ImageView
+                    android:id="@+id/TERMITEM_imageView_crown"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/crown"
+                    android:visibility="gone"
+                    android:scaleType="fitStart"/>
+            </LinearLayout>
+
 
             <TextView
                 android:id="@+id/TERMITEM_definition"
